add samsung_symbol to shimlib

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,7 +1,7 @@
 #########################################################################################################################
 on init
 #########################################################################################################################
-
+    export LD_SHIM_LIBS /system/lib/libsec.so|libsamsung_symbols.so
 # Vibetonz
     export VIBE_PIPE_PATH /dev/pipes
     mkdir /dev/pipes 0771 shell shell
